# array-of-babel

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/persist/: load.rs  mod.rs  save.rs
src/sim/: data_storage.rs  economy.rs  game.rs  jobs.rs  mod.rs  processors.rs
src/ui/: jobs_view.rs  mod.rs  processors_view.rs  storage_view.rs  store_view.rs
