[package]
name = "array-of-babel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
ratatui = "0.26"
crossterm = "0.27"
thiserror = "1"
